src/test/deca/context/invalid/instanceof_type_incompatible.deca
// Description :
//    Test d'un instanceof avec des types incohérents
//
// Résultats:
//    Ligne 12 : 
//
// Historique:
//    créé le 21/01/2017

{
    int n;
    boolean b = n instanceof int;
}
